@@ -5,7 +5,6 @@ INSTALL
 Makefile.PL
 MANIFEST			This list of files
 MANIFEST.SKIP
-META.yml
 README
 Session.pm
 Session/Driver.pm
@@ -39,3 +38,4 @@ t/g4_sqlite.t
 t/g4_sqlite_freezethaw.t
 t/g4_sqlite_storable.t
 t/g4_storable.t
+META.yml                                Module meta-data (added by MakeMaker)
